# MCP_ML_Agent

./: README.md  example_row.ipynb  mcp_client_demo.py  mcp_ml_server.py  ml_pipeline.py  parquet_store.py  pyproject.toml  requirements.txt
