[project]
name = "mcp-ml-agent"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "shap>=0.44",
  "pyarrow>=15.0",
  "mcp>=1.0.0",
  "openai-agents>=0.10.2",
]

[tool.uv]
dev-dependencies = ["ipykernel", "jupyter"]
